Security patches - Might break

--- a/public/index.html
+++ b/public/index.html
@@ -32,10 +32,10 @@
                         <h3>1. Connect to Database</h3>
                         <div class="input-group">
                             <label for="mongoUri">MongoDB Connection URI:</label>
-                            <input 
-                                type="text" 
-                                id="mongoUri" 
-                                placeholder="mongodb://localhost:27017/your-database" 
+                            <input
+                                type="password"
+                                id="mongoUri"
+                                placeholder="mongodb://localhost:27017/your-database"
                                 autocomplete="off"
                             />
                             <small>Example: mongodb://localhost:27017/plexdev or mongodb+srv://user:pass@cluster.mongodb.net/dbname</small>
